--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -618,35 +618,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17.5855053951\n"
+     "ename": "IOError",
+     "evalue": "[Errno 2] No such file or directory: 'simu.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-497897d12fbe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m \u001b[0measy_draw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-12-497897d12fbe>\u001b[0m in \u001b[0;36measy_draw\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0measy_draw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"simu.json\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mdataset_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dataset_num'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mmethod_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'method_num'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'simu.json'"
      ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY4AAAD8CAYAAABgmUMCAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHO9JREFUeJzt3XuUFeWd7vHvw00UEQSRZQClE4l44Soq6ERRIkZnUDKJ\nRkUhqEFPUKMyYzRxDkwmZ8Uo0Yg6eDCKiESMxNuMZqJy0dGjGFqQgCTCIqCNjtwERUG5/M4fu7pt\noLupTe9b089nrb1611tv7frtZsFD1Vv1liICMzOztJoUuwAzM2tYHBxmZpYVB4eZmWXFwWFmZllx\ncJiZWVYcHGZmlpW8BYekByWtlrSoWls7SS9IWpr8PDhpl6QJkpZJWiipb7VtRiT9l0oaka96zcws\nnXwecTwEfGuXtpuAmRHRDZiZLAOcDXRLXqOAiZAJGmAscBJwIjC2MmzMzKw48hYcEfEysH6X5vOA\nKcn7KcDQau0PR8brQFtJhwFnAS9ExPqI+Ah4gd3DyMzMCqhZgffXMSI+AIiIDyQdmrR3At6r1q8i\naautfTeSRpE5WqFVq1bHd+/ePcelm5nt28rLy9dGRIc99St0cNRGNbRFHe27N0ZMAiYB9OvXL+bN\nm5e76szMGgFJK9P0K/RVVR8mp6BIfq5O2iuALtX6dQber6PdzMyKpNDB8QxQeWXUCODpau3Dk6ur\n+gMbk1NafwQGSzo4GRQfnLSZmVmR5O1UlaRHgYHAIZIqyFwddSvwO0mXA+8C5yfdnwPOAZYBnwEj\nASJivaR/A/6U9PtZROw64G5mZgWkfXFadY9xmDUuW7dupaKigi1bthS7lAahZcuWdO7cmebNm+/U\nLqk8IvrtaftSGRw3M9trFRUVtG7dmq5duyLVdE2NVYoI1q1bR0VFBWVlZXv1GZ5yxMwavC1bttC+\nfXuHRgqSaN++fb2OzhwcZrZPcGikV9/flYPDzMyy4jEOM9vnaM6cnH5eDBy4xz4ffvgh119/Pa+/\n/joHH3wwLVq04MYbb+Tb3/52Tmt56KGHmDdvHvfcc09OPzcbPuIwM6uniGDo0KGceuqpLF++nPLy\ncqZPn05FRcVO/bZt21akCnPLwWFmVk+zZs2iRYsWXHXVVVVtRxxxBNdccw0PPfQQ559/PkOGDGHw\n4MEA3H777Zxwwgn07NmTsWPHVm3zyCOPcOKJJ9K7d2+uvPJKtm/fDsDkyZP5+te/zmmnncarr74K\nwCeffEJZWRlbt24F4OOPP6Zr165Vy/nk4DAzq6fFixfTt2/fWte/9tprTJkyhVmzZvH888+zdOlS\n3njjDRYsWEB5eTkvv/wyS5Ys4bHHHuPVV19lwYIFNG3alGnTpvHBBx8wduxYXn31VV544QXefvtt\nAFq3bs3AgQN59tlnAZg+fTrf+c53drs3Ix88xmFmlmOjR4/mlVdeoUWLFowePZozzzyTdu3aAfD8\n88/z/PPP06dPHwA2bdrE0qVLWbhwIeXl5ZxwwgkAbN68mUMPPZS5c+cycOBAOnTITFr7ve99j3fe\neQeAK664gttuu42hQ4cyefJk7r///oJ8PweHmVk9HXvssfz+97+vWr733ntZu3Yt/fplbsJu1apV\n1bqI4Oabb+bKK6/c6TPuvvtuRowYwS9+8Yud2p966qlaL5895ZRTWLFiBS+99BLbt2/nuOOOy9VX\nqpNPVZmZ1dMZZ5zBli1bmDhxYlXbZ599VmPfs846iwcffJBNmzYBsGrVKlavXs2gQYOYMWMGq1dn\nJg1fv349K1eu5KSTTmLOnDmsW7eOrVu38vjjj+/0ecOHD+eiiy5i5MiRefp2u/MRh5ntc9JcPptL\nknjqqae4/vrrue222+jQoQOtWrXil7/8JZs3b96p7+DBg1myZAkDBgwA4MADD+SRRx7hmGOO4ec/\n/zmDBw9mx44dNG/enHvvvZf+/fszbtw4BgwYwGGHHUbfvn2rBs0Bhg0bxi233MJFF11UuO/rSQ7N\nrKFbsmQJRx99dLHLKIoZM2bw9NNPM3Xq1Ky2q+l35kkOzcz2cddccw1/+MMfeO655wq6XweHmVkD\ndffddxdlvx4cNzOzrDg4zMwsKw4OMzPLioPDzMyy4uAws32PlNtXCk2bNqV3794cd9xxDBkyhA0b\nNuTkq6xYsaJgd4Sn5eAwM8uB/fffnwULFrBo0SLatWvHvffeW+yS8sbBYWaWYwMGDGDVqlVAZhLD\nQYMG0bdvX3r06MHTTz8NZI4kjj76aH7wgx9w7LHHMnjw4Kq7zMvLy+nVqxcDBgzYKYC2bNnCyJEj\n6dGjB3369GH27NlA5uFOQ4cOZciQIZSVlXHPPfdwxx130KdPH/r378/69etz+v0cHGZmObR9+3Zm\nzpzJueeeC0DLli158sknefPNN5k9ezZjxoyhcsaOpUuXMnr0aBYvXkzbtm2rJkocOXIkEyZM4LXX\nXtvpsytD5M9//jOPPvooI0aMYMuWLQAsWrSI3/72t7zxxhv89Kc/5YADDmD+/PkMGDCAhx9+OKff\n0cFhZpYDmzdvpnfv3rRv357169dz5plnApnZcH/yk5/Qs2dPvvnNb7Jq1So+/PBDAMrKyujduzcA\nxx9/PCtWrGDjxo1s2LCB0047DYBLL720ah+vvPJK1XL37t054ogjqqZYP/3002ndujUdOnSgTZs2\nDBkyBIAePXqwYsWKnH5XB4eZWQ5UjnGsXLmSL774ouroYNq0aaxZs4by8nIWLFhAx44dq44S9ttv\nv6rtmzZtyrZt24iIWqdRr2tuweqf1aRJk6rlJk2a5PyRtQ4OM7McatOmDRMmTGD8+PFs3bqVjRs3\ncuihh9K8eXNmz57NypUr69y+bdu2tGnThldeeQXIBE+lU089tWr5nXfe4d133+Woo47K35epheeq\nMrN9T5Fn/e7Tpw+9evVi+vTpDBs2jCFDhtCvXz969+5N9+7d97j95MmTueyyyzjggAM466yzqtp/\n+MMfctVVV9GjRw+aNWvGQw89tNORRqF4WnUza/Aa87Tqe6s+06r7VJWZmWXFwWFmZllxcJiZWVYc\nHGZmlhUHh5mZZcXBYWZmWXFwmNk+pwizqiOJMWPGVC2PHz+ecePG1bnNfffdl/N5pAqhKMEh6XpJ\niyUtkvSopJaSyiTNlbRU0mOSWiR990uWlyXruxajZjOzuuy333488cQTrF27NvU2V111FcOHD89j\nVflR8OCQ1Am4FugXEccBTYELgV8Cd0ZEN+Aj4PJkk8uBjyLiSODOpJ+ZWUlp1qwZo0aN4s4779xt\n3cqVKxk0aBA9e/Zk0KBBvPvuuwCMGzeO8ePHAzBhwgSOOeYYevbsyYUXXsiOHTvo1q0ba9asAWDH\njh0ceeSRWQVTvhTrVFUzYH9JzYADgA+AM4AZyfopwNDk/XnJMsn6QaptBjAzsyIaPXo006ZNY+PG\njTu1X3311QwfPpyFCxcybNgwrr322t22vfXWW5k/fz4LFy7kvvvuo0mTJlxyySVVc1O9+OKL9OrV\ni0MOOaQg36UuBQ+OiFgFjAfeJRMYG4FyYENEVE7hWAF0St53At5Ltt2W9G+/6+dKGiVpnqR5lQlt\nZlZIBx10EMOHD2fChAk7tb/22mtcfPHFQGaa9MoJDKvr2bMnw4YN45FHHqFZs8w0gpdddlnVGMiD\nDz7IyJEj8/wN0inGqaqDyRxFlAFfAVoBZ9fQtXISrZqOLnabYCsiJkVEv4jo16FDh1yVa2aWleuu\nu44HHniATz/9tNY+NZ00efbZZxk9ejTl5eUcf/zxbNu2jS5dutCxY0dmzZrF3LlzOfvsmv6pLLxi\nnKr6JvC3iFgTEVuBJ4CTgbbJqSuAzsD7yfsKoAtAsr4NkNvnIJqZ5Ui7du244IILeOCBB6raTj75\nZKZPnw5kpkn/u7/7u5222bFjB++99x6nn346t912Gxs2bGDTpk0AXHHFFVxyySVccMEFNG3atHBf\npA7FCI53gf6SDkjGKgYBbwOzge8mfUYATyfvn0mWSdbPin1xSl8zy5mI3L6yNWbMmJ0GsSdMmMDk\nyZPp2bMnU6dO5a677tqp//bt27nkkkuqniV+/fXX07ZtWwDOPfdcNm3aVDKnqaAIz+OIiLmSZgBv\nAtuA+cAk4FlguqSfJ22Vcf0AMFXSMjJHGhcWumYzsz2pPEIA6NixI5999lnVcteuXZk1a9Zu21S/\nz6OmcQ+At956i169eqV6jkehFOVBThExFhi7S/Ny4MQa+m4Bzi9EXWZmpeTWW29l4sSJOz0FsBTs\n8VSVpP0rL3+V9DVJ51QbizAzszy56aabWLly5W5jIsWWZozjv8ncc3EY8BLwv4AH81qVmVmWPPSZ\nXn1/V2mCo0lEfAZ8B7gnIoYAPeu1VzOzHGrZsiXr1q1zeKQQEaxbt46WLVvu9WekOeXURNIJwMXA\nqKStNK4JMzMDOnfuTEVFBb75N52WLVvSuXPnvd4+TXBcD/wr8GxELJL0VTKnr8zMSkLz5s0pKysr\ndhmNRprgODgizqlciIjlkl7MY01mZlbC0oxx3FJD209zXYiZmTUMtR5xSDoL+BbQSdId1VYdBOzI\nd2FmZlaa6jpVtRpYBGwBFldr/wS4KZ9FmZlZ6ao1OCJiPjBf0jQyRxiHR8SyglVmZmYlKc0YxyDg\nz8ALAJJ6S3oyr1WZmVnJShMcPwNOAjYARMQC4Mh8FmVmZqUrTXBsjYgNu7T59kwzs0YqzX0cSyRd\nQOYO8jLgR8Dr+S3LzMxKVZojjquB48kMkD8JfA5cl8+izMysdO3xiCMiPgV+nLzMzKyR22NwJFdQ\n7TqmsRGYB9wfEV/kozAzMytNaU5VvUfmEa9Tk9cXZB7h2hO4P3+lmZlZKUozON4rIk6rXJD0FPBS\nRJwq6e38lWZmZqUozRFHR0nVJ27/CtAhef957ksyM7NSluaI40bgNUl/AQR8HbhaUiugtJ6gbmZm\neVdncEhqAnxIJiyOIRMciyNic9JlfH7Ls701cOBAAObMmVPUOsxs31NncETEDkl3RUR/oLxANZmZ\nFYz/k5W9NGMcL0g6L++VmJlZg5BmjONqoI2kz4HNZE5XRUS0y2tlZmZWktIExyF5r6LEaF84ZN2Q\nmZdyn/guQCSnE8ys+NJMObJdUhvga0DLaqv+X96qMjOzkpVmypHLgRuATmQe6HQCmdlxB+a1MjMz\nK0lpTlVdB/QDXouIb0g6Frglv2WZWamTil1Bbu0r3ycK8LSkNMGxJSI2S0JSi4hYLKl73iuz+vn1\nr4tdgZnto9IExweS2gL/AfxR0noyNwWamVkjVGtwSGoWEdsi4tyk6V8kDQLaAM8WpDozMys5dR1x\nvAH0rd4QETPzW46ZmZW6uu4c30eGiszMLJfqOuLoIOmG2lZGxB17u9NkzOQ3wHFkni54GfBX4DGg\nK7ACuCAiPpIk4C7gHOAz4PsR8ebe7tvMbGdzil1Ag1PXEUdT4ECgdS2v+rgL+K+I6A70ApYANwEz\nI6IbMDNZBjgb6Ja8RgET67lvMzOrh7qOOD6IiJ/leoeSDgJOBb4PkDyz/ItkIsWBSbcpZP4b8GPg\nPODhiAjgdUltJR0WER/kujYzM9uzYoxxfBVYA0yWNF/Sb5KHQnWsDIPk56FJ/05knnteqSJp27lY\naZSkeZLmrVmzJk+lm5lZXcExKE/7bEbmaq2JEdEH+JQvT0vVpKYA2+3eyIiYFBH9IqJfhw4datjE\nzMxyodbgiIj1edpnBVAREXOT5RlkguRDSYcBJD9XV+vfpdr2nYH381SbmZntQZoHOeVURPwP8J6k\no5KmQcDbwDPAiKRtBPB08v4ZYLgy+gMbPb5hZlY8aaYcyYdrgGmSWgDLgZFkQux3yWy87wLnJ32f\nI3Mp7jIyl+OOLHy5ZmZWqa4pRz6hhrGEShFx0N7uNCIWkJlxd1e7jaskV1ON3tt9mZlZbtUaHBHR\nGkDSz4D/AaaSGageRv3v4zAzswYqzRjHWRHx7xHxSUR8HBETge/kuzAzMytNaYJju6RhkppKaiJp\nGLA934WZmVlpShMcFwMXkHkGx4dkBq0vzmdRZmZWuvZ4VVVErCAz7YeZmdmejzgkfV3STEmLkuWe\nkvzMcTOzRirNqar7gZuBrQARsRC4MJ9FmZlZ6UoTHAdExBu7tG3LRzFmZlb60gTHWklfI7kZUNJ3\nAU/5YWbWSKWZcmQ0MAnoLmkV8DcyNwGamVkjVGdwSGoC9IuIbybPzGgSEZ8UpjQzMytFdZ6qiogd\nwNXJ+08dGmb1M3DgQAYOHFjsMszqJc0YxwuS/klSF0ntKl95r8zMzEpSmjGOy5Kf1WeoDTKPgDUz\ns0YmzZ3jZYUoxMzMGoY0d44fIOkWSZOS5W6S/iH/pZmZWSlKc6pqMlAOnJwsVwCPA/+Zr6LMdiMV\nu4Lc2ie+T63PebN9XJrB8a9FxG18OeXIZjIPdDIzs0YoTXB8IWl/vrxz/GvA53mtyszMSlaaU1Xj\ngP8CukiaBpwCfD+PNZmZWQlLc1XV85LKgf5kTlH9KCLW5r0ys33QnGIXYJYDewwOSc8AjwLPRMSn\n+S/JzMxKWZoxjl8B3wDelvS4pO9KapnnuszMrESlOVX1EvCSpKbAGcAPgAeBg/Jcm5mZlaA0g+Mk\nV1UNAb4H9AWm5LMoMzMrXWnGOB4DTiJzZdW9wJxk1lwzM2uE0t45fnFEbM93MWZmVvrSBMdMYLSk\nU5Pll4D7ImJr/soyM7NSlSY4JgLNgX9Pli9N2q7IV1FmZla60gTHCRHRq9ryLElv5asgMzMrbWnu\n49iezE8FgKSvAh7vMDNrpNIccfwzMFvScjJTjhwBjMxrVWZmVrLS3AA4U1I34CgywfGXiPDsuGZm\njVStwSHpEkARMTUJioVJ+w8kfRoRvy1UkWZmVjrqGuMYAzxVQ/tjyTozM2uE6gqOphHxya6NEfEx\nmctz60VSU0nzJf1nslwmaa6kpZIek9Qiad8vWV6WrO9a332bmdneqys4mktqtWujpNZAixzs+0fA\nkmrLvwTujIhuwEfA5Un75cBHEXEkcGfSz8zMiqSu4HgAmFH9f/jJ++nJur0mqTPw98BvkmWRmXl3\nRtJlCjA0eX8eX06qOAMYlPQ3M7MiqHVwPCLGS9pEZkr1A8k8c/xT4NaImFjP/f4auBFonSy3BzZE\nxLZkuQLolLzvBLyX1LRN0sak/05PIZQ0ChgFcPjhh9ezPDMzq02dNwBGxH0RcQSZezfKIuKI+oaG\npH8AVkdEefXmmnafYl31WidFRL+I6NehQ4f6lGhmZnVI9TyOiNiUw32eApwr6RygJZkHQv0aaCup\nWXLU0Rl4P+lfAXQBKiQ1A9oA63NYj5mZZSHNlCM5FRE3R0TniOgKXAjMiohhwGzgu0m3EcDTyftn\nkmWS9bMiYrcjDjMzK4xag0PS+cnPsgLV8mPgBknLyIxhVA7APwC0T9pvAG4qUD1mZlaDuk5V3Qw8\nDvyezONicy4i5gBzkvfLgRNr6LMFOD8f+zczs+zVFRzrJM0GyiQ9s+vKiDg3f2WZmVmpqis4/p7M\nkcZU4FeFKcfMzEpdXfdxfAG8LunkiFiT3DEeOb7CyszMGpg0V1V1lDQfWAS8Lalc0nF5rsvMzEpU\nmuCYBNyQ3Px3OJmZcSfltywzMytVaYKjVUTMrlxIroTabfJDMzNrHNLcOb5c0r+QGSQHuAT4W/5K\nMjOzUpbmiOMyoAPwRPI6BD9z3Mys0UrzzPGPgGsLUIuZmTUABZ+ryszMGjYHh5mZZcXBYWZmWdnj\nGEcyO+41QNfq/T1XlZlZ45TmctynyExt/h/AjvyWY2ZmpS5NcGyJiAl5r8TMzBqENMFxl6SxwPPA\n55WNEfFm3qoyM7OSlSY4egCXAmfw5amqSJbNzKyRSRMc3wa+mkyzbmZmjVyay3HfAtrmuxAzM2sY\n0hxxdAT+IulP7DzG4ctxzcwaoTTBMTbvVZiZWYORZpLDlwpRiJmZNQxp7hz/hMxVVAAtgObApxFx\nUD4LMzOz0pTmiKN19WVJQ4ET81aRmZmVtKwnOYyIp/A9HGZmjVaaU1X/WG2xCdCPL09dmZlZI5Pm\nqqoh1d5vA1YA5+WlGjMzK3lpxjj8fHEzM6tSa3BI+t91bBcR8W95qMfMzEpcXUccn9bQ1gq4HGgP\nODjMzBqhWoMjIn5V+V5Sa+BHwEhgOvCr2rYzM7N9W51jHJLaATcAw4ApQN+I+KgQhZmZWWmqa4zj\nduAfgUlAj4jYVLCqzMysZNV1A+AY4CvALcD7kj5OXp9I+rgw5ZmZWampNTgioklE7B8RrSPioGqv\n1vWZp0pSF0mzJS2RtFjSj5L2dpJekLQ0+Xlw0i5JEyQtk7RQUt+93beZmdVf1lOO5MA2YExEHA30\nB0ZLOga4CZgZEd2AmckywNlAt+Q1CphY+JLNzKxSwYMjIj6IiDeT958AS4BOZO5Gn5J0mwIMTd6f\nBzwcGa8DbSUdVuCyzcwsUYwjjiqSugJ9gLlAx4j4ADLhAhyadOsEvFdts4qkbdfPGiVpnqR5a9as\nyWfZZmaNWtGCQ9KBwO+B6yKirsF21dC22ySLETEpIvpFRL8OHTrkqkwzM9tFUYJDUnMyoTEtIp5I\nmj+sPAWV/FydtFcAXapt3hl4v1C1mpnZzgoeHJIEPAAsiYg7qq16BhiRvB8BPF2tfXhydVV/YGPl\nKS0zMyu8NNOq59opwKXAnyUtSNp+AtwK/E7S5cC7wPnJuueAc4BlwGdkpj0xM7MiKXhwRMQr1Dxu\nATCohv4BjM5rUWZmllpRr6oyM7OGx8FhZmZZcXCYmVlWHBxmZpYVB4eZmWXFwWFmZllxcJiZWVYc\nHGZmlhUHh5mZZcXBYWZmWXFwmJlZVhwcZmaWFQeHmZllxcFhZmZZcXCYmVlWHBxmZpYVB4eZmWXF\nwWFmZllxcJiZWVYcHGZmlhUHh5mZZcXBYWZmWXFwmJlZVhwcZmaWFQeHmZllxcFhZmZZcXCYmVlW\nHBxmZpYVB4eZmWXFwWFmZllxcJiZWVYcHGZmlhUHh5mZZcXBYWZmWXFwmJlZVhpMcEj6lqS/Slom\n6aZi12Nm1lg1iOCQ1BS4FzgbOAa4SNIxxa3KzKxxahDBAZwILIuI5RHxBTAdOK/INZmZNUrNil1A\nSp2A96otVwAnVe8gaRQwKlncJOmvBarNCkDFLiC3DgHWFruI+tvH/lT2EarfH8sRaTo1lOCo6VcR\nOy1ETAImFaYcs70naV5E9Ct2HWZ7q6GcqqoAulRb7gy8X6RazMwatYYSHH8Cukkqk9QCuBB4psg1\nmZk1Sg3iVFVEbJN0NfBHoCnwYEQsLnJZZnvLp1StQVNE7LmXmZlZoqGcqjIzsxLh4DAzs6w4OMwK\nSNI4Sf+U5TaHS9pUfTtPwWPF5OAwK313An+oXPAUPFZsDg6zOkgaLmmhpLckTZU0RNJcSfMlvSip\nY9JvnKQHJc2RtFzStdU+46fJ0cGLwFFZ7n8osByofhWhp+CxomoQl+OaFYOkY4GfAqdExFpJ7cjM\nWNA/IkLSFcCNwJhkk+7A6UBr4K+SJgI9ydx31IfM37c3gfLk8/8ZGFbDrl+OiGsltQJ+DJwJVD+9\ntccpeMzyycFhVrszgBkRsRYgItZL6gE8JukwoAXwt2r9n42Iz4HPJa0GOgLfAJ6MiM8AJFXduBoR\ntwO317H/fwXujIhN2nkCoj1OwWOWTw4Os9qJ3f9Bvhu4IyKekTQQGFdt3efV3m/ny79fNf6jvqcj\nDjJHEd+VdBvQFtghaQuZIxZPwWNF4+Awq91M4ElJd0bEuuRUVRtgVbJ+RIrPeBl4SNKtZP6+DQH+\nL+z5iCMivlH5XtI4YFNE3COpGckUPEktFwIXZ/vlzPaWg8OsFhGxWNL/AV6StB2YT+YI43FJq4DX\ngbI9fMabkh4DFgArgf/OQV2egseKylOOmJlZVnw5rpmZZcXBYWZmWXFwmJlZVhwcZmaWFQeHmZll\nxcFhZmZZcXCYmVlW/j/oCJ9BQyHjMwAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x1114f4bd0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "def easy_draw():\n",
-    "    dataset_num = 1\n",
-    "    method_num = 3\n",
-    "    iter_per_set = 10\n",
-    "    dir_name = \"test\"\n",
-    "    data_src = \"SG\"\n",
-    "    color = ['c','r','b','g']\n",
+    "    with open(\"simu.json\",'r') as f:\n",
+    "        d = json.loads(f.read())\n",
+    "    dataset_num = d['dataset_num']\n",
+    "    method_num = d['method_num']\n",
+    "    iter_per_set = d['iter_per_set']\n",
+    "    dir_name = d['dir_name']\n",
+    "    data_src = d['data_src']\n",
+    "    marker = d['change_paras']\n",
+    "    title = d['title']\n",
+    "    \n",
+    "#     marker = ['cand=30','cand=60','cand=90','cand=120']\n",
+    "#     marker = ['k=10','k=20','k=30']\n",
+    "#     marker = ['cand=40','cand=42','cand=44']\n",
+    "\n",
+    "\n",
+    "    color = ['c','b','r','y','m','k']\n",
     "    Results = np.zeros((dataset_num, method_num, iter_per_set))\n",
     "    Stats = np.zeros((dataset_num, method_num, 2))#0 for mean, 1 for std\n",
     "\n",
@@ -675,16 +680,12 @@
     "        p = plt.bar(ind + width*(m-bias), Stats[:,m,0], width=width, color=color[m], yerr=Stats[:,m,1])\n",
     "        p_list.append(p)\n",
     "            \n",
-    "#     marker = ['p_0.1','p_0.01','p_0.001']\n",
-    "#     marker = ['cand=30','cand=60','cand=90','cand=120']\n",
-    "#     marker = ['k=10','k=20','k=30']\n",
-    "    marker = ['cand=40','cand=42','cand=44']\n",
     "    plt.xticks(ind, marker)\n",
-    "    plt.ylim(0,1000)\n",
+    "    plt.ylim(500,650)\n",
     "    tup = tuple([p[0] for p in p_list])\n",
-    "    plt.legend(tup,(\"Greedy\", \"Random\",\"Noisy\"))\n",
+    "    plt.legend(tup,(\"Greedy\", \"Noisy\",\"Random\"))\n",
     "    plt.ylabel(\"Num of Covered Targets\")\n",
-    "    plt.savefig(data_src+'_' + dir_name+'.png')\n",
+    "    plt.savefig(d['pic_name'])\n",
     "    plt.show()\n",
     "\n",
     "easy_draw()"
