--- a/code/Test Notebook.ipynb
+++ b/code/Test Notebook.ipynb
@@ -262,24 +262,443 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3,)"
+       "u'/home/HenryHuang/DataMining/DP/Differential_Privacy_Coverage/code'"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.ones((3,1))\n",
-    "b = a.squeeze()\n",
-    "b.shape"
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 2344\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   23675 Sep 11 03:00 diff_coverage.py\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang 1150630 Sep 11 03:00 optim_coverage.html\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   21953 Sep 11 08:43 optim_coverage.py\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   17547 Sep 11 08:43 optim_coverage.pyc\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang  794480 Sep 11 03:00 read_data.html\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang    9321 Sep 11 08:43 read_data.py\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   10456 Sep 11 08:43 read_data.pyc\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   56775 Sep 11 03:00 \u001b[0m\u001b[01;35mresult_0.jpg\u001b[0m\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   51352 Sep 11 03:00 \u001b[01;35mresult_1000.jpg\u001b[0m\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   50279 Sep 11 03:00 \u001b[01;35mresult_1400.jpg\u001b[0m\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   49913 Sep 11 03:00 \u001b[01;35mresult_1800.jpg\u001b[0m\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   53159 Sep 11 03:00 \u001b[01;35mresult_600.jpg\u001b[0m\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang    3296 Sep 11 08:54 simulate.py\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   37514 Sep 11 03:00 Test Notebook.ipynb\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang     979 Sep 11 03:00 test.py\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang    5140 Sep 11 03:00 util.py\r\n",
+      "-rw-rw-r-- 1 HenryHuang HenryHuang   29504 Sep 11 03:00 xi.npy\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls -l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:600, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:600, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:600, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:600, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:800, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:800, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:800, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:800, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:1000, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:1000, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:1000, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:1000, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:1200, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:1200, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:1200, k_favor:5\n",
+      "Data source:SG_tmp, p:0.02, eps:4, candidate:1200, k_favor:5\n",
+      "15423\n",
+      "22284\n",
+      "22284\n",
+      "22284\n",
+      "2018-09-11 09:26:12.596507 Finish Constructing Sparse Matrix, shape (15423, 967), nonzeros 77115\n",
+      "Data source:SG, p:0.02, people:15423, candidate:1000, k_favor:5\n",
+      "15423\n",
+      "mean of prior:0.005171, sum:5.00, std:0.00766\n",
+      "15423\n",
+      "20575\n",
+      "18451\n",
+      "15423\n",
+      "20575\n",
+      "22284\n",
+      "20575\n",
+      "2018-09-11 09:26:12.860912 Finish Constructing Sparse Matrix, shape (22284, 2365), nonzeros 111420\n",
+      "Data source:SG, p:0.02, people:22284, candidate:600, k_favor:5\n",
+      "mean of prior:0.002114, sum:5.00, std:0.00360\n",
+      "2018-09-11 09:26:12.951145 Finish Constructing Sparse Matrix, shape (15423, 967), nonzeros 77115\n",
+      "Data source:SG, p:0.02, people:15423, candidate:800, k_favor:5\n",
+      "mean of prior:0.005171, sum:5.00, std:0.00766\n",
+      "2018-09-11 09:26:12.990624 Finish Constructing Sparse Matrix, shape (15423, 967), nonzeros 77115\n",
+      "2018-09-11 09:26:12.996053 Finish Constructing Sparse Matrix, shape (22284, 2365), nonzeros 111420\n",
+      "Data source:SG, p:0.02, people:15423, candidate:600, k_favor:5\n",
+      "Data source:SG, p:0.02, people:22284, candidate:800, k_favor:5\n",
+      "mean of prior:0.005171, sum:5.00, std:0.00766\n",
+      "2018-09-11 09:26:13.097077 Finish Constructing Sparse Matrix, shape (22284, 2365), nonzeros 111420\n",
+      "18451\n",
+      "Data source:SG, p:0.02, people:22284, candidate:1200, k_favor:5\n",
+      "2018-09-11 09:26:13.174766 Finish Constructing Sparse Matrix, shape (15423, 967), nonzeros 77115\n",
+      "mean of prior:0.002114, sum:5.00, std:0.00360\n",
+      "Data source:SG, p:0.02, people:15423, candidate:1200, k_favor:5\n",
+      "18451\n",
+      "mean of prior:0.005171, sum:5.00, std:0.00766\n",
+      "18451\n",
+      "mean of prior:0.002114, sum:5.00, std:0.00360\n",
+      "2018-09-11 09:26:13.289629 Finish Constructing Sparse Matrix, shape (18451, 1441), nonzeros 92255\n",
+      "Data source:SG, p:0.02, people:18451, candidate:1000, k_favor:5\n",
+      "2018-09-11 09:26:13.351470 Finish Constructing Sparse Matrix, shape (20575, 1903), nonzeros 102875\n",
+      "mean of prior:0.003470, sum:5.00, std:0.00541\n",
+      "Data source:SG, p:0.02, people:20575, candidate:600, k_favor:5\n",
+      "20575\n",
+      "mean of prior:0.002627, sum:5.00, std:0.00430\n",
+      "2018-09-11 09:26:13.500255 Finish Constructing Sparse Matrix, shape (20575, 1903), nonzeros 102875\n",
+      "Data source:SG, p:0.02, people:20575, candidate:1000, k_favor:5\n",
+      "2018-09-11 09:26:13.577211 Finish Constructing Sparse Matrix, shape (20575, 1903), nonzeros 102875\n",
+      "mean of prior:0.002627, sum:5.00, std:0.00430\n",
+      "Data source:SG, p:0.02, people:20575, candidate:1200, k_favor:5\n",
+      "2018-09-11 09:26:13.627986 Finish Constructing Sparse Matrix, shape (22284, 2365), nonzeros 111420\n",
+      "Data source:SG, p:0.02, people:22284, candidate:1000, k_favor:5\n",
+      "mean of prior:0.002627, sum:5.00, std:0.00430\n",
+      "mean of prior:0.002114, sum:5.00, std:0.00360\n",
+      "2018-09-11 09:26:13.799328 Finish Constructing Sparse Matrix, shape (18451, 1441), nonzeros 92255\n",
+      "2018-09-11 09:26:13.843896 Finish Constructing Sparse Matrix, shape (18451, 1441), nonzeros 92255\n",
+      "Data source:SG, p:0.02, people:18451, candidate:800, k_favor:5\n",
+      "Data source:SG, p:0.02, people:18451, candidate:600, k_favor:5\n",
+      "2018-09-11 09:26:13.912018 Finish Constructing Sparse Matrix, shape (18451, 1441), nonzeros 92255\n",
+      "mean of prior:0.003470, sum:5.00, std:0.00541\n",
+      "mean of prior:0.003470, sum:5.00, std:0.00541\n",
+      "Data source:SG, p:0.02, people:18451, candidate:1200, k_favor:5\n",
+      "mean of prior:0.003470, sum:5.00, std:0.00541\n",
+      "2018-09-11 09:26:14.412744 Finish Constructing Sparse Matrix, shape (20575, 1903), nonzeros 102875\n",
+      "Data source:SG, p:0.02, people:20575, candidate:800, k_favor:5\n",
+      "mean of prior:0.002627, sum:5.00, std:0.00430\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Linear Regression over\n",
+      "Finish Iter_0\n",
+      "Finish Iter_0\n",
+      "Finish Iter_0\n",
+      "Finish Iter_0\n",
+      "Finish Iter_1\n",
+      "Finish Iter_0\n",
+      "Finish Iter_0\n",
+      "Finish Iter_1\n",
+      "Finish Iter_0\n",
+      "Finish Iter_0\n",
+      "Finish Iter_2\n",
+      "Finish Iter_1\n",
+      "Finish Iter_0\n",
+      "Finish Iter_1\n",
+      "Finish Iter_0\n",
+      "Finish Iter_0\n",
+      "Finish Iter_3\n",
+      "Finish Iter_2\n",
+      "Finish Iter_1\n",
+      "Finish Iter_1\n",
+      "Finish Iter_0\n",
+      "Finish Iter_2\n",
+      "Finish Iter_0\n",
+      "Finish Iter_4\n",
+      "perfect only needs: 334\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_3\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_1\n",
+      "Finish Iter_0\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_1\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "[1.41581259 1.08052709 1.00439239 1.        ]\n",
+      "Finish Iter_2\n",
+      "Finish Iter_0\n",
+      "Finish Iter_3\n",
+      "Finish Iter_4\n",
+      "perfect only needs: 334\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_1\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_1\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_3\n",
+      "Finish Iter_1\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_0\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "[1.32520214 1.077155   1.00863369 1.        ]\n",
+      "Finish Iter_3\n",
+      "Finish Iter_4\n",
+      "perfect only needs: 334\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_3\n",
+      "Finish Iter_4\n",
+      "noisy only needs: 59\n",
+      "[1.26653569 1.07531107 1.02292076 1.        ]\n",
+      "perfect only needs: 512\n",
+      "Finish Iter_1\n",
+      "noisy only needs: 70\n",
+      "Finish Iter_1\n",
+      "Finish Iter_4\n",
+      "noisy only needs: 70\n",
+      "perfect only needs: 334\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 59\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 59\n",
+      "[1.21819098 1.05946082 1.00907029 1.        ]\n",
+      "Finish Iter_2\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 70\n",
+      "Finish Iter_1\n",
+      "noisy only needs: 70\n",
+      "[1.6247604  1.06550908 1.00800541 1.        ]\n",
+      "Finish Iter_4\n",
+      "Finish Iter_3\n",
+      "perfect only needs: 512\n",
+      "Finish Iter_3\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "Finish Iter_1\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "Finish Iter_3\n",
+      "noisy only needs: 70\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 70\n",
+      "[1.4935738  1.085199   1.00746269 1.        ]\n",
+      "Finish Iter_4\n",
+      "Finish Iter_3\n",
+      "Finish Iter_3\n",
+      "noisy only needs: 78\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 78\n",
+      "Finish Iter_4\n",
+      "noisy only needs: 78\n",
+      "Finish Iter_1\n",
+      "perfect only needs: 512\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 70\n",
+      "Finish Iter_4\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 70\n",
+      "perfect only needs: 512\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 78\n",
+      "[1.72801831 1.08048827 0.99084494 1.        ]\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "[1.39564165 1.07699758 0.99176755 1.        ]\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "Finish Iter_3\n",
+      "noisy only needs: 70\n",
+      "Finish Iter_4\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "noisy only needs: 70\n",
+      "[1.3279882  1.05704543 0.99990784 1.        ]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finish Iter_4\n",
+      "noisy only needs: 84\n",
+      "perfect only needs: 693\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "Finish Iter_3\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "Finish Iter_3\n",
+      "noisy only needs: 78\n",
+      "[1.63558229 1.07864203 1.00214869 1.        ]\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "[1.8040301  1.05941365 1.01357779 1.        ]\n",
+      "Finish Iter_4\n",
+      "perfect only needs: 693\n",
+      "Finish Iter_2\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "Finish Iter_4\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "[1.53492499 1.07920632 0.99774157 1.        ]\n",
+      "Finish Iter_3\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "Finish Iter_4\n",
+      "noisy only needs: 84\n",
+      "perfect only needs: 693\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 84\n",
+      "[1.76388889 1.07175926 1.01157407 1.        ]\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "noisy only needs: 78\n",
+      "Finish Iter_3\n",
+      "noisy only needs: 78\n",
+      "[1.43970343 1.0531094  0.9948555  1.        ]\n",
+      "Finish Iter_4\n",
+      "perfect only needs: 881\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "[1.65095986 1.04991274 0.99895288 1.        ]\n",
+      "Finish Iter_4\n",
+      "perfect only needs: 881\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "noisy only needs: 84\n",
+      "[1.55715038 1.05478009 0.99223071 1.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run simulate.py"
    ]
   },
   {
@@ -292,9 +711,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_py27",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "anaconda_py2"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
