Auto stash before merge of "master" and "HenryNebula/master"

--- a/code/Test Notebook.ipynb
+++ b/code/Test Notebook.ipynb
@@ -703,6 +703,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_num = 200\n",
+    "N = 100\n",
+    "visit_mtx = np.zeros((N, target_num))\n",
+    "for i in range(N):\n",
+    "    rand_ind = np.random.choice(np.arange(target_num), 5, replace=False)\n",
+    "    visit_mtx[i, rand_ind] = 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.sum(visit_mtx, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.ones(target_num) * 2\n",
+    "b = np.ones(target_num)\n",
+    "\n",
+    "Ind = []\n",
+    "for i in range(5):\n",
+    "    Ind.append(np.random.choice(np.arange(target_num), 5, replace=False))\n",
+    "    \n",
+    "part_a = np.array([a[i] for i in Ind])\n",
+    "part_b = np.array([b[i] for i in Ind])\n",
+    "part_x = np.array([x[i] for i in Ind])\n",
+    "grad = (np.exp(part_a) - 1) * np.exp(part_a * part_x + part_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5., 3., 1., 5., 0.],\n",
+       "       [3., 4., 2., 2., 2.],\n",
+       "       [0., 2., 0., 1., 1.],\n",
+       "       [0., 5., 5., 5., 3.],\n",
+       "       [3., 2., 3., 1., 1.]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "part_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 21,  36,  74, 109, 155])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(visit_mtx[1,:])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
